--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ r_packages:
   - dplyr
   - rlang
 # set R dependencies from GitHub
+r_github_packages:
   - MUCollective/multiverse
 # set Linux system dependencies
 # apt_packages:
