--- a/.travis.yml
+++ b/.travis.yml
@@ -35,5 +35,5 @@ after_success:
 
 deploy:
   provider: script
-  script: Rscript -e 'pkgdown::deploy_site_github()'
+  script: Rscript -e 'pkgdown::deploy_site_github(ssh_id = Sys.getenv("TRAVIS_DEPLOY_KEY", ""))'
   skip-clenup: true
