--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: r
 cache: packages
 sudo: required
-warnings_are_errors: false
+warnings_are_errors: true
 
 # set R dependencies from CRAM
 r_packages:
