--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,10 @@ r_packages:
   - testthat
   - covr
   - pkgdown
-  - dplyr
-  - rlang
   - kableExtra
-# set R dependencies from GitHub
-r_github_packages:
-  - MUCollective/multiverse
+# # set R dependencies from GitHub
+# r_github_packages:
+#   - MUCollective/multiverse
 
 addons:
   apt:
