--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,12 @@ Encoding: UTF-8
 LazyData: true
 Depends: 
   R (>= 3.6)
+Suggests:
+  testthat (>= 2.1.0),
+  pkgdown (>= 1.5.1),
+  covr,
+  knitr,
+  rmarkdown
 Remotes:
   github::MUCollective/multiverse
 Imports:
