remove extra / in the url.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,4 +34,4 @@ Remotes:
   github::MUCollective/multiverse
 RoxygenNote: 7.1.0
 VignetteBuilder: knitr
-URL: https://mverseanalysis.github.io/mverse/
+URL: https://mverseanalysis.github.io/mverse
