--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(add_formula_branch,mverse)
 S3method(add_mutate_branch,mverse)
 S3method(execute_multiverse,mverse)
 S3method(extract,mverse)
+S3method(summary,glm_mverse)
 S3method(summary,lm_mverse)
 S3method(summary,mverse)
 export(add_filter_branch)
@@ -15,6 +16,7 @@ export(execute_multiverse)
 export(extract)
 export(filter_branch)
 export(formula_branch)
+export(glm_mverse)
 export(lm_mverse)
 export(mutate_branch)
 export(mverse)
