implement ttest_mverse

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(glm_mverse)
 export(lm_mverse)
 export(mutate_branch)
 export(mverse)
+export(ttest_mverse)
 import(dplyr)
 importFrom(magrittr,"%>%")
 importFrom(stringr,str_replace)
