--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,9 @@ export(glm_mverse)
 export(lm_mverse)
 export(mutate_branch)
 export(mverse)
+export(run_module)
 export(ttest_mverse)
 import(dplyr)
+import(shiny)
 importFrom(magrittr,"%>%")
 importFrom(stringr,str_replace)
