--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,5 +27,7 @@ export(run_module)
 export(ttest_mverse)
 import(dplyr)
 import(shiny)
+import(shinyBS)
+import(shinyjs)
 importFrom(magrittr,"%>%")
 importFrom(stringr,str_replace)
