--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R: c(
   role = c("aut")),
   person("Mingwei", "Xu", email = "yuka.xu@mail.utoronto.ca", 
   role = c("aut")),
-  person("Gibbs", "Alison", email = "alison.gibbs@utoronto.ca",
+  person("Alison", "Gibbs", email = "alison.gibbs@utoronto.ca",
   role = c("aut")),
   person("Nathan", "Taback", email = "nathan.taback@utoronto.ca",
   role = "aut"),
