started implement coxph_mverse
coxph_verse
summary.coxph_mverse
Havent done test and documenting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(add_family_branch)
 export(add_filter_branch)
 export(add_formula_branch)
 export(add_mutate_branch)
+export(coxph_mverse)
 export(create_multiverse)
 export(execute_multiverse)
 export(extract)
@@ -29,3 +30,4 @@ export(mutate_branch)
 export(mverse)
 export(spec_curve)
 export(ttest_mverse)
+importFrom(stringr,str_replace)
