1. add branch conditioning; 2. add multiverse tree; 3. organize example vs. case study; 4. complete hurricane readme/hurricane case study/example 1

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,2 +1,14 @@
 destination: docs
 url: https://mverseanalysis.github.io/mverse
+figures:
+  dpi: 144
+articles:
+- title: Examples
+  navbar: Examples
+  contents:
+  - example-1
+
+- title: Case Studies
+  navbar: Case Studies
+  contents:
+  - hurricane
