--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,8 @@ Imports:
   stringr,
   stats,
   igraph,
-  ggraph
+  ggraph,
+  ggplot2
 Suggests:
   tidyverse,
   broom,
@@ -48,4 +49,4 @@ Remotes:
   github::MUCollective/multiverse
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
-URL: https://mverseanalysis.github.io/mverse
+URL: https://github.com/mverseanalysis/mverse, https://mverseanalysis.github.io/mverse
