--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -7,7 +7,8 @@ articles:
   navbar: Examples
   contents:
   - example-1
-
+  - getting-start
+  - regression
 - title: Case Studies
   navbar: Case Studies
   contents:
