update documentations and vignettes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,3 +40,5 @@ import(ggplot2)
 import(ggraph)
 import(igraph)
 importFrom(stringr,str_replace)
+importFrom(survival,Surv)
+importFrom(survival,coxph)
