--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(add_formula_branch,mverse)
 S3method(add_mutate_branch,mverse)
 S3method(execute_multiverse,mverse)
 S3method(extract,mverse)
+S3method(spec_curve,coxph_mverse)
 S3method(spec_curve,glm_mverse)
 S3method(spec_curve,lm_mverse)
 S3method(summary,glm_mverse)
