Revert "Fix erros/typos in ttest_mverse()"

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,10 +7,6 @@ Authors@R: c(
   role = c("aut", "cre")),
   person("Haoda", "Li", email = "haoda.li@mail.utoronto.ca", 
   role = c("aut")),
-  person("Mingwei", "Xu", email = "yuka.xu@mail.utoronto.ca", 
-  role = c("aut")),
-  person("Alison", "Gibbs", email = "alison.gibbs@utoronto.ca",
-  role = c("aut")),
   person("Nathan", "Taback", email = "nathan.taback@utoronto.ca",
   role = "aut"),
   person("Fanny", "Chevalier", email = "fanny@cs.tornto.edu",
@@ -31,10 +27,7 @@ Imports:
   tidyr,
   tibble,
   stringr,
-  stats,
-  igraph,
-  ggraph,
-  ggplot2
+  stats 
 Suggests:
   tidyverse,
   broom,
@@ -49,4 +42,4 @@ Remotes:
   github::MUCollective/multiverse
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
-URL: https://github.com/mverseanalysis/mverse, https://mverseanalysis.github.io/mverse
+URL: https://mverseanalysis.github.io/mverse
