--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -8,6 +8,7 @@ articles:
   contents:
   - example-1
   - getting-start
+  - getting-start-new
   - regression
 - title: Case Studies
   navbar: Case Studies
