--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,20 +10,19 @@ S3method(add_mutate_branch,mverse)
 S3method(execute_multiverse,mverse)
 S3method(extract,mverse)
 S3method(print,branch)
-S3method(spec_curve,coxph_mverse)
 S3method(spec_curve,glm_mverse)
 S3method(spec_curve,lm_mverse)
-S3method(summary,coxph_mverse)
 S3method(summary,glm_mverse)
 S3method(summary,lm_mverse)
 S3method(summary,mverse)
+export(AIC)
+export(BIC)
 export(add_branch_condition)
 export(add_family_branch)
 export(add_filter_branch)
 export(add_formula_branch)
 export(add_mutate_branch)
 export(branch_condition)
-export(coxph_mverse)
 export(create_multiverse)
 export(execute_multiverse)
 export(extract)
@@ -40,6 +39,3 @@ export(ttest_mverse)
 import(ggplot2)
 import(ggraph)
 import(igraph)
-importFrom(stringr,str_replace)
-importFrom(survival,Surv)
-importFrom(survival,coxph)
