--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,19 +23,23 @@ Encoding: UTF-8
 LazyData: true
 Depends: 
   R (>= 3.6),
-  multiverse (>= 0.3),
   magrittr (>= 1.5)
 Imports:
+  multiverse,
   rlang,
   dplyr,
   tidyr,
+  tidyselect,
   tibble,
   stringr,
   stats,
+  grDevices,
   igraph,
   ggraph,
-  ggplot2
+  ggplot2,
+  cowplot
 Suggests:
+  scales,
   tidyverse,
   broom,
   tidybayes,
