--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,8 @@ S3method(summary,coxph_mverse)
 S3method(summary,glm_mverse)
 S3method(summary,lm_mverse)
 S3method(summary,mverse)
+export(AIC)
+export(BIC)
 export(add_branch_condition)
 export(add_family_branch)
 export(add_filter_branch)
@@ -40,6 +42,6 @@ export(ttest_mverse)
 import(ggplot2)
 import(ggraph)
 import(igraph)
-importFrom(stringr,str_replace)
+importFrom(rlang,":=")
 importFrom(survival,Surv)
 importFrom(survival,coxph)
