updated DESCRIPTION file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: mverse
 Type: Package
 Title: "mverse": A User Friendly "Multiverse" Analysis Package in R 
-  for Researchers, Educators, and Students in Statistics
+    for Researchers, Educators, and Students in Statistics
 Version: 0.1.0
 Authors@R: c(
   person("Michael Jongho", "Moon", email = "moon@utstat.toronto.edu", 
@@ -19,7 +19,14 @@ Authors@R: c(
   )
 Maintainer: Michael Jongho Moon <moon@utstat.toronto.edu>
 Description: "mverse" is an extension to "multiverse" package 
-  which allows users perform to create explorable multiverse analysis in R. This extension provides user friendly abstraction and a set of examples for researchers, educators, and students in statistics. 
+    (Sarma A., Kale A., Moon M., Taback N., Chevalier F., Hullman J., Kay M., 2021) 
+    <doi:10.31219/osf.io/yfbwm>, which allows users perform to create explorable 
+    "multiverse" analysis in R. This extension provides an additional level of
+    abstraction to the "multiverse" package with the aim of creating
+    user friendly syntax to researchers, educators, and students in statistics. 
+    The "mverse" syntax is designed to allow piping and takes hints from
+    the "tidyverse" grammar. The package allows users to define and inpect
+    "multiverse" analysis using familiar syntax in R.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
