--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,9 +32,9 @@ Encoding: UTF-8
 LazyData: true
 Depends: 
   R (>= 3.6),
-  magrittr (>= 1.5)
+  multiverse
 Imports:
-  multiverse,
+  magrittr (>= 1.5),
   rlang,
   dplyr,
   tidyr,
@@ -42,22 +42,21 @@ Imports:
   tibble,
   stringr,
   stats,
+  scales,
+  tidyverse,
+  broom,
   grDevices,
   igraph,
   ggraph,
   ggplot2,
   cowplot
 Suggests:
-  scales,
-  tidyverse,
-  broom,
-  tidybayes,
   testthat (>= 2.1.0),
   pkgdown (>= 1.5.1),
   covr,
   knitr,
   rmarkdown,
   kableExtra
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 VignetteBuilder: knitr
 URL: https://github.com/mverseanalysis/mverse, https://mverseanalysis.github.io/mverse
