--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(spec_curve,lm_mverse)
 S3method(summary,glm_mverse)
 S3method(summary,lm_mverse)
 S3method(summary,mverse)
+export("%>%")
 export(AIC)
 export(BIC)
 export(add_branch_condition)
@@ -39,4 +40,7 @@ export(ttest_mverse)
 import(ggplot2)
 import(ggraph)
 import(igraph)
+import(multiverse)
+importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
+importFrom(rlang,.data)
