--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,10 @@ S3method(add_mutate_branch,mverse)
 S3method(execute_multiverse,mverse)
 S3method(extract,mverse)
 S3method(print,branch)
+S3method(spec_curve,glm.nb_mverse)
 S3method(spec_curve,glm_mverse)
 S3method(spec_curve,lm_mverse)
+S3method(summary,glm.nb_mverse)
 S3method(summary,glm_mverse)
 S3method(summary,lm_mverse)
 S3method(summary,mverse)
@@ -29,6 +31,7 @@ export(extract)
 export(family_branch)
 export(filter_branch)
 export(formula_branch)
+export(glm.nb_mverse)
 export(glm_mverse)
 export(lm_mverse)
 export(multiverse_tree)
