add formula branch covariate option as individual branches and display when printing formula branches.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(add_branch_condition,mverse)
 S3method(execute_multiverse,mverse)
 S3method(extract,mverse)
 S3method(print,branch)
+S3method(print,formula_branch)
 S3method(print,spec_summary)
 S3method(spec_curve,spec_summary)
 S3method(spec_summary,mverse)
