--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,7 +37,7 @@ export(mutate_branch)
 export(mverse)
 export(spec_curve)
 export(spec_summary)
-export(ttest_mverse)
+export(t_test_mverse)
 import(ggplot2)
 import(ggraph)
 import(ggupset)
@@ -47,3 +47,4 @@ importFrom(Rdpack,reprompt)
 importFrom(magrittr,`%>%`)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
+importFrom(utils,getFromNamespace)
