--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Tidy Multiverse Analysis Made Simple
 Version: 0.1.1
 Authors@R: c(
-  person("Michael Jongho", "Moon", email = "michael.moon@mail.utoronto.ca",
+  person("Michael Jongho", "Moon", email = "michael.moon@utoronto.ca",
   role = c("aut", "cre")),
   person("Haoda", "Li", email = "haoda.li@mail.utoronto.ca",
   role = c("aut")),
@@ -32,7 +32,7 @@ LazyData: true
 Remotes: const-ae/ggupset
 Depends:
   R (>= 3.6),
-  multiverse
+  multiverse (>= 0.6.2)
 Imports:
   Rdpack,
   magrittr (>= 1.5),
@@ -47,20 +47,20 @@ Imports:
   igraph,
   ggraph,
   ggplot2,
-  ggupset
+  ggupset (>= 0.4.1)
 Suggests:
-    methods,
-    tibble,
-    purrr,
-    scales,
-    MASS,
-    testthat (>= 3.0.0),
-    pkgdown (>= 1.5.1),
-    covr,
-    knitr,
-    rmarkdown,
-    kableExtra,
-    spelling
+  methods,
+  tibble,
+  purrr,
+  scales,
+  MASS,
+  testthat (>= 3.0.0),
+  pkgdown (>= 1.5.1),
+  covr,
+  knitr,
+  rmarkdown,
+  kableExtra,
+  spelling
 RoxygenNote: 7.3.2
 RdMacros: Rdpack
 VignetteBuilder: knitr
