--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: mverse
 Type: Package
 Title: Tidy Multiverse Analysis Made Simple
-Version: 0.1.1
+Version: 0.2.0
 Authors@R: c(
   person("Michael Jongho", "Moon", email = "michael.moon@utoronto.ca",
   role = c("aut", "cre")),
@@ -16,7 +16,7 @@ Authors@R: c(
   person("Alison", "Gibbs", email = "alison.gibbs@utoronto.ca",
   role = c("ctb"))
   )
-Maintainer: Michael Jongho Moon <michael.moon@mail.utoronto.ca>
+Maintainer: Michael Jongho Moon <michael.moon@utoronto.ca>
 Description: Extends 'multiverse' package
     (Sarma A., Kale A., Moon M., Taback N., Chevalier F., Hullman J., Kay M., 2021)
     <doi:10.31219/osf.io/yfbwm>, which allows users perform to create explorable
